# asterix

./: .cproject  .gitattributes  .gitignore  .project  .travis.yml  CMakeLists.txt  HISTORY  MANIFEST.in  PKG-INFO  README  README.md  README.rst  SECURITY.md  setup.cfg  setup.py  testfile
.github/workflows/: codeql-analysis.yml  publish.yml  python-publish.yml
asterix/: __init__.py
asterix-specs-converter/: README.md  asterix_cat011_1_2.xml  asterix_cat011_1_2_generated.xml  asterix_cat011_1_3_generated.xml  asterix_cat021_2_4-1_4_generated.xml  asterixjson2xml.py  cat011-v1.2.json  cat011-v1.3.json  cat011_cat-1.2.json  cat011_cat-1.3.json  cat021_cat-2.4.json  cat021_ref-1.4.json  json-to-rst.py  json-to-xml.py  update-specs.py
asterix-specs-converter/specs/: asterix.dtd  asterix.ini  asterix_bds.xml  asterix_cat001_1_2.xml  asterix_cat001_1_3.xml  asterix_cat001_1_4.xml  asterix_cat002_1_0.xml  asterix_cat002_1_1.xml  asterix_cat004_1_12.xml  asterix_cat008_1_2.xml  asterix_cat008_1_3.xml  asterix_cat009_2_1.xml  asterix_cat010_1_1.xml  asterix_cat011_1_2.xml  asterix_cat011_1_3.xml  asterix_cat015_1_0.xml  asterix_cat015_1_1.xml  asterix_cat016_1_0.xml  asterix_cat018_1_7.xml  asterix_cat019_1_3.xml  asterix_cat020_1_10.xml  asterix_cat020_1_9.xml  asterix_cat021_2_4.xml  asterix_cat021_2_5.xml  asterix_cat021_2_6.xml  asterix_cat023_1_2.xml  asterix_cat023_1_3.xml  asterix_cat025_1_5.xml  asterix_cat032_1_1.xml  asterix_cat034_1_27.xml  asterix_cat034_1_28.xml  asterix_cat034_1_29.xml  asterix_cat048_1_27.xml  asterix_cat048_1_28.xml  asterix_cat048_1_29.xml  asterix_cat048_1_30.xml  asterix_cat062_1_17.xml  asterix_cat062_1_18.xml  asterix_cat062_1_19.xml  asterix_cat063_1_6.xml  (+4 more)
asterix.egg-info/: PKG-INFO  SOURCES.txt  eager_resources.txt  top_level.txt
asterix/config/: asterix.dtd  asterix_bds.xml  asterix_cat001_1_2.xml  asterix_cat002_1_0.xml  asterix_cat004_1_13.xml  asterix_cat004_1_8.xml  asterix_cat008_1_0.xml  asterix_cat010_1_1.xml  asterix_cat011_1_2.xml  asterix_cat015_1_2.xml  asterix_cat019_1_2.xml  asterix_cat020_1_10.xml  asterix_cat020_1_7.xml  asterix_cat021_1_8.xml  asterix_cat021_2_4.xml  asterix_cat021_2_6.xml  asterix_cat023_1_3.xml  asterix_cat025_1_2.xml  asterix_cat030_6_2.xml  asterix_cat031_6_2.xml  asterix_cat032_7_0.xml  asterix_cat034_1_26.xml  asterix_cat034_1_27.xml  asterix_cat048_1_21.xml  asterix_cat062_1_16.xml  asterix_cat062_1_17.xml  asterix_cat062_1_17_draft.xml  asterix_cat062_1_18.xml  asterix_cat063_1_3.xml  asterix_cat065_1_3.xml  asterix_cat205_1_0.xml  asterix_cat240_1_3.xml  asterix_cat247_1_2.xml  asterix_cat252_7_0.xml
asterix/docs/: Makefile  conf.py  examples.rst  index.rst  install.rst  make.bat  usage.rst
asterix/examples/: multicast_receive.py  multicast_send_receive.py  read_final_file.py  read_pcap_file.py  read_raw_bytes.py  read_raw_file.py  xml_parser.py
asterix/sample_data/: cat034.raw  cat062cat065.raw  cat_062_065.pcap
asterix/test/: __init__.py  parsing_error_1.xml  parsing_error_2.xml  test_cat62error.py  test_init.py  test_memory_leak.py  test_parse.py
asterix_decoder.egg-info/: PKG-INFO  SOURCES.txt
examples/: multicast_send_receive.py  read_pcap_file.py  read_raw_bytes.py  read_raw_file.py
install/: asterix_multicast_to_text.sh  asterix_pcap_to_json.bat  asterix_pcap_to_json.sh  asterix_pcap_to_parsable.bat  asterix_pcap_to_parsable.sh  asterix_pcap_to_text.bat  asterix_pcap_to_text.sh  test.bat  test.sh  updatetests.bat  updatetests.sh  valgrind_test.sh
install/config/: asterix.dtd  asterix.ini  asterix_bds.xml  asterix_cat001_1_1.xml  asterix_cat001_1_2.xml  asterix_cat002_1_0.xml  asterix_cat004_1_12.xml  asterix_cat004_1_13.xml  asterix_cat004_1_8.xml  asterix_cat008_1_0.xml  asterix_cat010_1_1.xml  asterix_cat011_1_2.xml  asterix_cat015_1_2.xml  asterix_cat019_1_2.xml  asterix_cat019_1_3.xml  asterix_cat020_1_7.xml  asterix_cat021_0_23.xml  asterix_cat021_0_26.xml  asterix_cat021_1_8.xml  asterix_cat021_2_1_RE_1_1.xml  asterix_cat021_2_4.xml  asterix_cat023_1_2.xml  asterix_cat025_1_1.xml  asterix_cat025_1_5.xml  asterix_cat030_6_2.xml  asterix_cat031_6_2.xml  asterix_cat032_6_2.xml  asterix_cat032_7_0.xml  asterix_cat034_1_26.xml  asterix_cat034_1_27.xml  asterix_cat048_1_14.xml  asterix_cat048_1_21.xml  asterix_cat062_0_17.xml  asterix_cat062_1_16.xml  asterix_cat062_1_17.xml  asterix_cat062_1_18.xml  asterix_cat062_1_7.xml  asterix_cat062_1_9.xml  asterix_cat063_1_3.xml  asterix_cat065_1_2.xml  (+8 more)
install/sample_data/: .gitignore  asterix.pcap  cat048.raw  cat21_re.ast  cat_001_002.pcap  cat_001_002.txt  cat_001_002.xml  cat_001_002_json.txt  cat_001_002_jsonh.txt  cat_001_002_line.txt  cat_034_048.pcap  cat_062_065.txt  cat_062_065_json.txt  filter.txt  parsegps.gps
install/sample_output/: cat_001_002.txt  cat_001_002.xml  cat_001_002_json.txt  cat_001_002_jsonh.txt  cat_001_002_line.txt  cat_034_048.txt  cat_034_048_filtered.txt  cat_062_065_json.txt  filter.txt  parsegps.txt
install/test/: test.bat  test.sh  updatetests.sh  valgrind.result  valgrind_test.sh
src/: Makefile  makefile.include  makefile.include.bak  makefile.rules
src/asterix/: AsterixData.cpp  AsterixData.h  AsterixDefinition.cpp  AsterixDefinition.h  Category.cpp  Category.h  DataBlock.cpp  DataBlock.h  DataItem.cpp  DataItem.h  DataItemBits.cpp  DataItemBits.h  DataItemDescription.cpp  DataItemDescription.h  DataItemFormat.cpp  DataItemFormat.h  DataItemFormatBDS.cpp  DataItemFormatBDS.h  DataItemFormatCompound.cpp  DataItemFormatCompound.h  DataItemFormatExplicit.cpp  DataItemFormatExplicit.h  DataItemFormatFixed.cpp  DataItemFormatFixed.h  DataItemFormatRepetitive.cpp  DataItemFormatRepetitive.h  DataItemFormatVariable.cpp  DataItemFormatVariable.h  DataRecord.cpp  DataRecord.h  InputParser.cpp  InputParser.h  Makefile  Tracer.cpp  Tracer.h  UAP.cpp  UAP.h  UAPItem.cpp  UAPItem.h  Utils.cpp  (+31 more)
src/asterix/ethereal-plugin/plugins/asterix/: AUTHORS  Makefile.am  Makefile.in  Makefile.nmake  moduleinfo.h  packet-asterix.c  packet-asterix.h  plugin.c
test/: test_init.py  test_parse.py
(+124 files in other folders)
